cert/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chenminhua.top
      secretName: quickstart-example-tls
  rules:
    - host: chenminhua.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: my-service
              servicePort: 80
